# fullstack_rust_yew

frontend/: Cargo.toml  index.html
frontend/src/: context.rs  hooks.rs  main.rs
frontend/src/api/: crates.rs  mod.rs  rustaceans.rs  user.rs
frontend/src/components/: alert.rs  crate_form.rs  crate_list.rs  header.rs  input.rs  input_form.rs  login_form.rs  mod.rs  rustacean_form.rs  rustacean_list.rs  select.rs  sidebar.rs  textarea.rs
frontend/src/pages/: home.rs  login.rs  mod.rs  navigator.rs  not_found.rs
frontend/src/pages/crates/: add.rs  delete.rs  edit.rs  index.rs  mod.rs
frontend/src/pages/rustaceans/: add.rs  delete.rs  edit.rs  index.rs  mod.rs
