[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
web-sys = {version = "0.3.66", features = ["HtmlInputElement"]}
gloo-console = "0.3.0"
gloo-net = "0.4.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"